--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="main">
             <div class="focus">
                 <ul>
-                    <Li><img src="../shopping/images/focus1.png" alt=""></Li>
+                    <Li><img src="images/focus1.png" alt=""></Li>
                 </ul>
             </div>
             <div class="newsflash">
@@ -217,14 +217,14 @@
     <!-- 推荐模块start -->
     <div class="w recom">
         <div class="recom_hd">
-            <img src="../shopping/images/recom.png" alt="">
+            <img src="images/recom.png" alt="">
         </div>
         <div class="recom_bd">
             <ul>
-                <li><img src="../shopping/images/recom_03.jpg" alt=""></li>
-                <li><img src="../shopping/images/recom_03.jpg" alt=""></li>
-                <li><img src="../shopping/images/recom_03.jpg" alt=""></li>
-                <li><img src="../shopping/images/recom_03.jpg" alt=""></li>
+                <li><img src="images/recom_03.jpg" alt=""></li>
+                <li><img src="images/recom_03.jpg" alt=""></li>
+                <li><img src="images/recom_03.jpg" alt=""></li>
+                <li><img src="images/recom_03.jpg" alt=""></li>
             </ul>
         </div>
     </div>
@@ -294,7 +294,7 @@
                                     <a href="#">电热水器</a>
                                 </li>
                             </ul>
-                            <a href="#"><img src="../shopping/images/floor-1-1.png" alt=""></a>
+                            <a href="#"><img src="./images/floor-1-1.png" alt=""></a>
                         </div>
                         <div class="col_329">
                             <a href="#"><img src="./images/floor-1-b01.png" alt=""></a>
@@ -377,7 +377,7 @@
                                     <a href="#">电热水器</a>
                                 </li>
                             </ul>
-                            <a href="#"><img src="../shopping/images/floor-1-1.png" alt=""></a>
+                            <a href="#"><img src="./images/floor-1-1.png" alt=""></a>
                         </div>
                         <div class="col_329">
                             <a href="#"><img src="./images/floor-1-b01.png" alt=""></a>
